# FA-Labs

./: .gitignore  LICENSE  MyNotes.txt  README.md
Bonus/: CMakeLists.txt
Bonus/include/: fheap.h
Bonus/src/: fheap.c  main.c
Bonus/test/: tests
Lab1/: CMakeLists.txt
Lab1/Task1/: CMakeLists.txt
Lab1/Task1/include/: functions.h
Lab1/Task1/src/: functions.c  main.c  math_operations.c
Lab1/Task1/test/: tests.txt
Lab1/Task2/include/: functions.h
Lab1/Task2/src/: functions.c  main.c
Lab1/Task2/test/: tests.txt
Lab1/Task3/include/: functions.h
Lab1/Task3/src/: functions.c  main.c
Lab1/Task4/include/: functions.h
Lab1/Task4/src/: functions.c  main.c
Lab1/Task4/test/: tests.txt
Lab1/Task5/include/: functions.h
Lab1/Task5/src/: functions.c  main.c
Lab1/Task5/test/: tests.txt
Lab1/Task6/include/: functions.h
Lab1/Task6/src/: functions.c  main.c
Lab1/Task6/test/: tests.txt
Lab1/Task7/: CMakeLists.txt
Lab1/Task7/include/: functions.h
Lab1/Task7/src/: functions.c  main.c
Lab1/Task7/test/: tests.txt
Lab1/Task8/: CMakeLists.txt
Lab1/Task8/include/: functions.h
Lab1/Task8/src/: functions.c  main.c
Lab1/include/: math_operations.h
Lab1/src/: main.c
Lab2/Task2/: CMakeLists.txt
Lab2/Task3/: CMakeLists.txt
Lab3/Task2/: CMakeLists.txt
Lab3/Task3/: CMakeLists.txt
Lab3/Task4/: CMakeLists.txt
Lab3/Task5/: CMakeLists.txt
Lab3/Task5/include/: manager.h  menu.h  queue.h  simulation.h  structures.h
Lab3/Task5/src/: main.c  manager.c  menu.c  queue.c  simulation.c
Lab3/Task5/test/: tests
Lab3/Task7/: CMakeLists.txt
(+53 files in other folders)
